--- a/src/entrypoints/sidepanel/index.html
+++ b/src/entrypoints/sidepanel/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <p>Hello World</p>
+    <div id="root"></div>
+    <script type="module" src="@/main.tsx"></script>
   </body>
 </html>
